--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="./dist/ambiguis.min.js" data-initial-dpr=0 data-font-size=16 data-maximum-dpr=0 id="ambiguis"></script>
+    <script src="./index.js" data-initial-dpr=0 data-font-size=16 data-maximum-dpr=0 id="ambiguis"></script>
     <meta name="viewport" content="initial-scale=0.3333333333333333, maximum-scale=0.3333333333333333, minimum-scale=0.3333333333333333, user-scalable=no">
     <meta charset="utf-8">
 
