remove useless module

--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="./index.js"></script>
+    <script src="./dist/ambiguis.min.js"></script>
+    <script type="text/javascript">
+      ambiguis({
+        initialDpr: 2,
+        fontSize: 20
+      });
+    </script>
     <meta name="viewport" content="initial-scale=0.3333333333333333, maximum-scale=0.3333333333333333, minimum-scale=0.3333333333333333, user-scalable=no">
     <meta charset="utf-8">
 
