add iframe test

--- a/iframe.html
+++ b/iframe.html
@@ -4,8 +4,8 @@
     <script src="./dist/ambiguis.min.js"></script>
     <script type="text/javascript">
       ambiguis({
-        initialDpr: 2,
-        fontSize: 20
+        // initialDpr: 2,
+        fontSize: 16
       });
     </script>
     <meta name="viewport" content="initial-scale=0.3333333333333333, maximum-scale=0.3333333333333333, minimum-scale=0.3333333333333333, user-scalable=no">
@@ -82,7 +82,5 @@
       字体：
       <span class="font-lg">3rem</span>
     </div>
-
-    <iframe src="./iframe.html" width="100%" height="1000px"></iframe>
   </body>
 </html>
