--- a/iframe.html
+++ b/iframe.html
@@ -7,6 +7,10 @@
         // initialDpr: 2,
         fontSize: 16
       });
+
+      // setTimeout(() => {
+      //   console.log(window.ele);
+      // }, 1000);
     </script>
     <meta name="viewport" content="initial-scale=0.3333333333333333, maximum-scale=0.3333333333333333, minimum-scale=0.3333333333333333, user-scalable=no">
     <meta charset="utf-8">
