--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,8 @@
     <script src="./dist/ambiguis.min.js"></script>
     <script type="text/javascript">
       ambiguis({
-        initialDpr: 2,
+        // initialDpr: 2,
+        maxWidth: 300,
         fontSize: 20
       });
     </script>
