解决reflow闪动问题

--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
       ambiguis({
         // initialDpr: 2,
-        maxWidth: 300,
+        // maxWidth: 300,
         fontSize: 20
       });
     </script>
